Fix text align for nested code blocks

--- a/css/rtl.css
+++ b/css/rtl.css
@@ -7,6 +7,7 @@ code {
 }
 code[class*="language-"] {
   direction: ltr;
+  text-align: left;
 }
 
 code::before {
